Infra 관련내용은 Infra 카테고리로 묶음

--- a/_posts/Infra/2023-01-26-[Infra] - IAC란.markdown
+++ b/_posts/Infra/2023-01-26-[Infra] - IAC란.markdown
@@ -1,14 +1,15 @@
 ---
 title: "[Infra] - IAC란"
-layout: post
+categories:
+  - Infra
+tags:
+  - [Ansible]
+
+toc: true
+toc_sticky: true
+
 date: 2023-01-26
-image: /assets/images/Post/infrastructure.png
-headerImage: true
-tag:
-- Ansible
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2023-01-26
 ---
 
 ## Infrastructure as Code(IAC)란?:
