Linux 관련내용은 Linux 카테고리로 묶음

--- a/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.markdown
+++ b/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.markdown
@@ -1,16 +1,15 @@
 ---
 title: "[Linux] - 리눅스 메모리 캐시 삭제하기"
-layout: post
+categories:
+  - Linux
+tags:
+  - [Linux, 메모리, 캐시]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-01
-image: /assets/images/Post/Memory.png
-headerImage: true
-tag:
-- Linux
-- 메모리
-- 캐시
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-01
 ---
 
 ## 리눅스 메모리 캐시 삭제를 알고 싶었던 계기 :
