MarkDown 관련내용은 MarkDown 카테고리로 묶음

--- a/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
+++ b/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .markdown
@@ -1,15 +1,15 @@
 ---
 title: "[MarkDown] - 마크다운 사용법"
-layout: post
+categories:
+  - MarkDown
+tags:
+  - [MarkDown, Log]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-18
-image: /assets/images/Post/markdown.png
-headerImage: true
-tag:
-- Markdown
-- Log
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-18
 ---
 
 ## 마크다운(MarkDown)은 무엇인가?:
