Web 관련내용들 Web 카테고리에 묶음

--- a/_posts/Web/2022-08-10-[Web] - Nginx 설치하기.markdown
+++ b/_posts/Web/2022-08-10-[Web] - Nginx 설치하기.markdown
@@ -1,15 +1,15 @@
 ---
-title: "[WEB] - Nginx 설치하기"
-layout: post
+title: "[Web] - Nginx 설치하기"
+categories:
+  - Web
+tags:
+  - [Web, Nginx]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-10
-image: /assets/images/Post/nginx.png
-headerImage: true
-tag:
-- WEB
-- Nginx
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-10
 ---
 
 ## Nginx란? :
