--- a/_posts/Web/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
+++ b/_posts/Web/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
@@ -1,16 +1,15 @@
 ---
-title: "[WEB] - Nginx 로드밸런싱 구현하기"
-layout: post
+title: "[Web] - Nginx 로드밸런싱 구현하기"
+categories:
+  - Web
+tags:
+  - [Web, Nginx, Loadbalancing]
+
+toc: true
+toc_sticky: true
+
 date: 2022-09-05
-image: /assets/images/Post/nginx.png
-headerImage: true
-tag:
-- WEB
-- Nginx
-- Loadbalancing
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-09-05
 ---
 
 ## 로드밸런싱이란?:
