--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.markdown
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.markdown
@@ -1,17 +1,15 @@
 ---
-title: "[WEB] - 정적페이지와 동적페이지 차이"
-layout: post
+title: "[Web] - 정적페이지와 동적페이지 차이"
+categories:
+  - Web
+tags:
+  - [Web, WAS, 동적페이지, 정적페이지]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-08
-image: /assets/images/Post/WEBWAS.png
-headerImage: true
-tag:
-- WEB
-- WAS
-- 동적페이지
-- 정적페이지
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-08
 ---
 
 ## 정적페이지와 동적페이지에 대해 알고 싶었던 계기 :
