API 관련내용 API 카테고리로 묶음

--- a/_posts/API/2022-08-19-[API] - API란.markdown
+++ b/_posts/API/2022-08-19-[API] - API란.markdown
@@ -1,15 +1,15 @@
 ---
 title: "[API] - API란"
-layout: post
+categories:
+  - API
+tags:
+  - [API]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-19
-image: /assets/images/Post/api.png
-headerImage: true
-tag:
-- Markdown
-- Log
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-19
 ---
 
 ## API란?:
