DB 관련내용들 DB 카테고리로 묶음

--- a/_posts/DB/2022-08-11-[DB] - Redis란.markdown
+++ b/_posts/DB/2022-08-11-[DB] - Redis란.markdown
@@ -1,15 +1,15 @@
 ---
 title: "[DB] - Redis란"
-layout: post
+categories:
+  - DB
+tags:
+  - [DB, NoSQL]
+
+toc: true
+toc_sticky: true
+
 date: 2022-08-11
-image: /assets/images/Post/redis.png
-headerImage: true
-tag:
-- DB
-- NoSQL
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2022-08-11
 ---
 
 ## Redis란? :
