--- a/_posts/DB/2023-02-12-[DB] - 인덱스란.markdown
+++ b/_posts/DB/2023-02-12-[DB] - 인덱스란.markdown
@@ -1,15 +1,15 @@
 ---
 title: "[DB] - 인덱스란"
-layout: post
+categories:
+  - DB
+tags:
+  - [DB, Index]
+
+toc: true
+toc_sticky: true
+
 date: 2023-02-12
-image: /assets/images/Post/db.png
-headerImage: true
-tag:
-- DB
-- Index
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2023-02-12
 ---
 
 ## 데이터베이스 인덱스(Index)를 알고싶었던 계기:
