--- a/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.markdown
+++ b/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.markdown
@@ -1,15 +1,15 @@
 ---
 title: "[DB] - 저장 프로시저란"
-layout: post
+categories:
+  - DB
+tags:
+  - [DB]
+
+toc: true
+toc_sticky: true
+
 date: 2023-02-15
-image: /assets/images/Post/db.png
-headerImage: true
-tag:
-- DB
-- Index
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2023-02-15
 ---
 
 ## 저장 프로시저(Stored Procedure)를 알고싶었던 계기:
