--- a/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.markdown
+++ b/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.markdown
@@ -1,14 +1,15 @@
 ---
-title: "[알고리즘] - sha256이란"
-layout: post
+title: "[Algorithm] - sha256이란"
+categories:
+  - Algorithm
+tags:
+  - [Algorithm, sha256]
+
+toc: true
+toc_sticky: true
+
 date: 2023-02-28
-image: /assets/images/Post/encryption.png
-headerImage: true
-tag:
-- 알고리즘
-category: blog
-author: hwangyoonjae
-description: Markdown summary with different options
+last_modified_at: 2023-02-28
 ---
 
 ## sha256을 알고싶었던 계기:
