--- a/_posts/Vue/2022-07-15-[Vue] - 라이브러리 설치.markdown
+++ b/_posts/Vue/2022-07-15-[Vue] - 라이브러리 설치.markdown
@@ -22,15 +22,15 @@ $ npm i element-ui -S
 ```
 
 - main.js에 빨간 박스 내용 입력
-[![텍스트](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+[![텍스트](/assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
 <br>
 7~8번줄은 ElementUI 관련 내용 추가하였고, 10번줄은 element ui 사용하겠다는 의미다.
 
 - element ui 적용
-[![텍스트](../assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)](../assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)
+[![텍스트](/assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)](../assets/images/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)
 
 - 실행화면 확인
-[![텍스트](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
+[![텍스트](/assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
 
@@ -45,10 +45,10 @@ $ npm i -D @vue/composition-api
 ```
 
 - main.js에 아래 내용 입력
-[![텍스트](../assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+[![텍스트](/assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/images/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
 
 - 실행화면 확인
-[![텍스트](../assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
+[![텍스트](/assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/images/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
 
@@ -59,6 +59,6 @@ $ npm install axios
 ```
 
 - package.json에 Axios 추가 확인
-[![텍스트](../assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)](../assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)
+[![텍스트](/assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)](../assets/images/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)
 
 * * *
