게시글 누락된 이미지, 목차 오류난 부분 수정

--- a/_posts/Web/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
+++ b/_posts/Web/2022-09-05-[Web] - Nginx 로드밸런싱 구현하기.markdown
@@ -18,23 +18,23 @@ last_modified_at: 2022-09-05
 * * *
 
 ## Nginx 로드 밸런싱 메서드:
-#### Round Robin (라운드 로빈):
+### Round Robin (라운드 로빈):
 - 서버의 가중치를 고려해, 실제 서버들을 처음부터 차례로 선택해 가며 모든 서버로 균등하게 분산 된다.<br>
 <span style="color:#FA5858; font-size:12px">※ 로드 밸런싱 메서드 입력 안하면 default 값이다.</span>
 - 장점 : 거의 균등하게 분산 가능하다.
 - 단점 : 경로가 보장 되지 않는다.
 
-#### Least-connected (최소 연결):
+### Least-connected (최소 연결):
 - 서버의 가중치를 고려해, 활성 연결 수가 가장 적은 서버로 요청을 전송 한다.
 - 장점 : 거의 균등하게 분산 가능하다.
 - 단점 : 경로 보장 되지 않는다.
 
-#### Ip_hash:
+### Ip_hash:
 - 요청이 클라이언트 IP주소로 해싱하고, 한번 요청 받은 서버가 있을 때 해당 서버에만 요청을 분배한다.
 - 장점 : 경로 보장 가능하다.
 - 단점 : 균등한 분산이 어렵다.
 
-#### Least_time (최소 시간):
+### Least_time (최소 시간):
 - 연결 수가 가장 적으면서 평균 응답시간이 가장 적은 쪽을 선택해서 분배한다.
 
 * * *
