--- a/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
+++ b/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
@@ -17,9 +17,11 @@ etcdctl endpoint status --write-out=table \
     --key=/etc/kubernetes/pki/etcd/server.key
 ```
 
->[!QUESTION]- API 버전 3을 사용하도록 지정할까?
+>API 버전 3을 사용하도록 지정할까?
+>
 >API v3는 여러 면에서 개선된 기능을 제공하며, 특히 대규모 시스템이나 높은 트랜잭션 빈도 환경에서 더 나은 성능과 안정성을 제공한다.
 >따라서 새로운 프로젝트나 시스템에서는 v3 API를 사용하는 것이 권장한다고 한다.
+{: .prompt-warning }
 
 * * *
 
@@ -42,7 +44,7 @@ etcdctl --endpoints=https://127.0.0.1:2379 \
 Snapshot saved at /opt/snapshot-pre-boot.db
 ```
 
-## 백업 파일 확인하기
+## 백업 파일 확인하기 :
 ```bash
 $ ls -al /opt
 # -rw-------   1 root root 36724768 Jul 17 10:18 snapshot-pre-boot.db
@@ -50,7 +52,7 @@ $ ls -al /opt
 
 * * *
 
-## etcd snapshot restore 하기 :
+## etcd snapshot restore하기 :
 ```bash
 $ ETCDCTL_API=3;
 etcdctl --data-dir /var/lib/etcd-from-backup \
