Helm 게시글 카테고리를 Helm으로 변경

--- a/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
+++ b/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "[Kubernetes] - Helm이란"
+title: "[Helm] - Helm이란"
 date: 2024-02-14
-categories: Kubernetes
-tags: [Kubernetes, Helm]
-image: /assets/img/post-title/kubernetes-wallpaper.jpg
+categories: Helm
+tags: [Helm, Kubernetes]
+image: /assets/img/post-title/helm-wallpaper.jpg
 ---
 
 ## Helm이란?:
