이미지 클릭 시 새창에서 보지 않도록 수정

--- a/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
+++ b/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
@@ -42,39 +42,42 @@ $ mv linux-amd64/helm /usr/local/bin/helm
 
 * * *
 
-### Helm 버전 확인하기:
+## Helm 버전 확인하기:
 ```bash
 $ helm version
 ```
-[![Helm 버전 확인](/assets/img/post/kubernetes/Helm%20버전%20확인.png)](/assets/img/post/kubernetes/Helm%20버전%20확인.png)
+![Helm 버전 확인](/assets/img/post/kubernetes/Helm%20버전%20확인.png)
 
 * * *
 
-### Helm Repostory(저장소) 추가하기:
+## Helm Repostory(저장소) 추가하기:
 - Stable이라는 이름으로 Repository를 추가한다.
+
 ```bash
 $ helm repo add stable https://charts.helm.sh/stable
 $ helm search repo stable
 ```
-[![Helm Repository 목록](/assets/img/post/kubernetes/Helm%20Repository%20목록.png)](/assets/img/post/kubernetes/Helm%20Repository%20목록.png)
+![Helm Repository 목록](/assets/img/post/kubernetes/Helm%20Repository%20목록.png)
 
 * * *
 
-### Helm Chart 설치해보기:
+## Helm Chart 설치해보기:
 - 테스트 진행을 위해 Stable Repo 내에 prometheus가 있는지 확인하고, chart를 설치한다.
+
 ```bash
 $ helm search repo prometheus
 # helm install [RELEASE_NAME] [HELM_CHART]
 $ helm install prometheus-test stable/prometheus
 ```
-[![Helm repo stable 에러 발생](/assets/img/post/kubernetes/Helm%20repo%20stable%20에러%20발생.png)](/assets/img/post/kubernetes/Helm%20repo%20stable%20에러%20발생.png)
+![Helm repo stable 에러 발생](/assets/img/post/kubernetes/Helm%20repo%20stable%20에러%20발생.png)
 
 - helm chart 저장소 stable은 helm v3 부터 해당 저장소의 대한 공시적인 지원을 종료하였다고 하여, 비공식 저장소 중 대표적인 bitnami를 사용한다.
+
 ```bash
 $ helm repo add bitnami https://charts.bitnami.com/bitnami
 # helm install [RELEASE_NAME] [HELM_CHART]
 $ helm install prometheus-test bitnami/prometheus
 ```
-[![Helm chart 저장소 변경 후 prometheus 설치](/assets/img/post/kubernetes/Helm%20chart%20저장소%20변경%20후%20prometheus%20설치.png)](/assets/img/post/kubernetes/Helm%20chart%20저장소%20변경%20후%20prometheus%20설치.png)
+![Helm chart 저장소 변경 후 prometheus 설치](/assets/img/post/kubernetes/Helm%20chart%20저장소%20변경%20후%20prometheus%20설치.png)
 
 * * *
