git branch 개념 및 로컬과 원격 브랜치 생성 방법 작성완료

--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
@@ -7,8 +7,11 @@ tags: [Git, branch]
 image: /assets/img/post-title/gitLab-wallpaper.jpg
 ---
 
-## 로컬 브랜치(local branch) :
-- 개발자가 자신의 컴퓨터에서 직접 작업하는 브랜치
+## 브랜치(branch) :
+- Git에서 코드의 개발 흐름을 나눠서 관리하는 작업 공간을 의미
+- 프로젝트의 여러 작업을 독립적으로 진행할 수 있어, 서로 다른 기능 개발이나 버그 수정을 동시에 진행하면서도 코드의 메인 흐름을 안전하게 유지할 수 있다.
+
+### 브랜치(branch) 사용 방법 :
 
 ```bash
 # 브랜치 생성
@@ -17,19 +20,71 @@ $ git branch [브랜치명]
 # 브랜치 변경
 $ git checkout [브랜치명]
 
-# 브랜치 목록 보기
-$ git brach -r
+# 브랜치 병합
+$ git checkout [브랜치명]
+$ git merge [브랜치명]
 
-# 생성한 local branch를 remote branch에 추가
-$ git push origin [브랜치명]
-
-# local branch, remote branch 연동
-git branch --set-upstream-to origin/<브랜치 이름> 
+# 브랜치 삭제
+git branch -d [브랜치 이름]  # 로컬 브랜치 삭제
+git push origin --delete [브랜치 이름]  # 원격 브랜치 삭제
 ```
+
+### 브랜치(branch) 전략 :
+- **Git Flow**: 브랜치 관리를 위한 전략으로, 기능 브랜치, 버그 수정 브랜치, 릴리즈 브랜치를 명확히 구분하여 사용하는 방식
+- **GitHub Flow**: 기본 브랜치에서 기능 브랜치를 만들어 개발 후 PR(Pull Request)로 병합하는 방식
+
+* * *
+
+## 로컬 브랜치(local branch) :
+- 개발자가 자신의 컴퓨터에서 직접 작업하는 브랜치
+
+### 표기 방식 :
+- main, feature-x, bugfix-123 등 단순히 브랜치 이름으로 나타난다.
 
 * * *
 
 ## 원격 브랜치(remote branch) :
-- 원격 저장소(GitHub, GitLab 등)에 있는 브랜치
+- GitHub, GitLab, Bitbucket과 같은 원격 저장소 서버에 저장된 브랜치이고, 여러 개발자가 함께 작업할 수 있도록 공유된 코드 상태를 유지한다.
+
+### 표기 방식 :
+- 원격 브랜치는 일반적으로 origin/main, origin/feature-x처럼 원격 저장소 이름(origin)과 브랜치 이름이 /로 구분되어 표기된다.
 
 * * *
+
+## 로컬 브랜치(local branch)와 원격 브랜치(remote branch) 생성하기 :
+
+```bash
+# 새로운 로컬 브랜치 생성
+git branch [브랜치명]
+
+# 생성한 브랜치로 전환
+git checkout [브랜치명]
+
+# 또는 한 줄로 생성하고 전환
+git checkout -b [브랜치명]
+
+# 현재 로컬 브랜치 목록 확인
+git branch
+
+# 로컬 브랜치에서 변경 사항 커밋
+git add .
+git commit -m "Add my feature"
+
+# 원격 저장소에 푸시하여 원격 브랜치 생성
+git push origin [브랜치명]
+
+# 원격 브랜치 목록 확인
+git branch -r
+
+# 원격 브랜치에서 로컬 브랜치 생성
+git checkout -b [브랜치명] origin/[브랜치명]
+
+# 원격 저장소에서 최신 변경 사항 가져오기
+git fetch origin
+
+# 특정 원격 브랜치에서 로컬로 가져오기
+git checkout [브랜치명]
+git pull origin [브랜치명]
+```
+
+* * * 
