git reset 명령어 옵션 부분에서 -- 표기가 안되어서 수정

--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
@@ -22,7 +22,7 @@ $ git revert [commit-hash]
 
 ## git reset :
 - 현재 브랜치의 HEAD를 지정한 커밋으로 이동시키며, 그 이후의 커밋을 삭제할 수 있다.
-- --soft, --mixed, --hard 옵션에 따라 변경 사항이 다르게 적용된다.
+- -\-soft, -\-mixed, -\-hard 옵션에 따라 변경 사항이 다르게 적용된다.
 
 ### 옵션 :
 - **-\-soft**: HEAD만 이동하고, 변경 사항은 스테이징 상태로 유지.
