--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
@@ -63,8 +63,8 @@ $ git restore --source [commit] [file]
 
 |명령어|목적|영향을 받는 커밋|사용 예|
 |-----|---|---------------|-------|
-|git revert|이전 커밋의 변경 사항을 새로운 커밋으로 취소|원본 커밋 유지	git revert <commit-hash>|
-|git reset|커밋을 되돌리며 이전 상태로 롤백	커밋 삭제 가능|git reset --hard <commit-hash>|
-|git restore|파일 또는 스테이징 영역에서 변경 사항 복구	특정 파일|git restore <file>|
+|git revert|이전 커밋의 변경 사항을 새로운 커밋으로 취소|되돌리고자 하는 커밋만 영향받으며, 원본 커밋은 히스토리에 남음|git revert \<commit-hash>|
+|git reset|커밋을 되돌리며 이전 상태로 롤백	커밋 삭제 가능|지정한 커밋 이후의 모든 커밋이 삭제되거나, 스테이징 상태로 이동|git reset -\-hard \<commit-hash>|
+|git restore|파일 또는 스테이징 영역에서 변경 사항 복구|커밋 기록에는 영향이 없으며, 특정 파일의 상태만 되돌림|git restore \<file>|
 
 * * *
