API 카테고리 분류

--- a/_posts/API/2022-08-19-[API] - API란.md
+++ b/_posts/API/2022-08-19-[API] - API란.md
@@ -2,12 +2,10 @@
 layout: post
 title: "[API] - API란"
 date: 2022-08-19
-categories: API
+categories: API Concept
 tags: [API]
 image: /assets/img/post-title/api-wallpaper.jpg
 ---
-
-
 
 ## API란?:
 - Application Programing Interface에 약자로, 응용 프로그램에서 사용할 수 있도록 운영 체제나 프로그래밍 언어가 제공하는 기능을 제어할 수 있게 만든 인터페이스다.
