Bash shell 카테고리 분류

--- a/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
+++ b/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[Bash] - 리다이렉션 기호 이해하기"
 date: 2023-02-08
-categories: Bash
+categories: Bash Concept
 tags: [Shell script, /dev/null, 2>&1]
 image: /assets/img/post-title/bash-wallpaper.jpg
 ---
