CKA 카테고리 분류

--- a/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
+++ b/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "[CKA] - etcd 백업하기.md"
+title: "[CKA] - etcd 백업하기"
 date: 2024-07-17
-categories: CKA
+categories: CKA Test
 tags: [Kubernetes, etcd, CKA]
 image: /assets/img/post-title/kubernetes-wallpaper.jpg
 ---
