DB 카테고리 분류

--- a/_posts/DB/2023-02-12-[DB] - 인덱스란.md
+++ b/_posts/DB/2023-02-12-[DB] - 인덱스란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[DB] - 인덱스란"
 date: 2023-02-12
-categories: DB
+categories: DB Concept
 tags: [DB, Index]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
