--- a/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.md
+++ b/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[DB] - 저장 프로시저란"
 date: 2023-02-15
-categories: DB
+categories: DB Concept
 tags: [DB, Procedure]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
