--- a/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
+++ b/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[DB] - DB데이터 문자열 자르기"
 date: 2023-03-11
-categories: DB
+categories: DB Test
 tags: [SUBSTR]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
