--- a/_posts/DB/2022-10-14-[DB] - Join이란.md
+++ b/_posts/DB/2022-10-14-[DB] - Join이란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[DB] - Join이란"
 date: 2022-10-14
-categories: DB
+categories: DB Concept
 tags: [Join, 결합]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
