Gitlab 카테고리 분류

--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 작업 되돌리는 방법.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[Gitlab] - 작업 되돌리는 방법"
 date: 2024.10.31
-categories: Gitlab
+categories: Gitlab Test
 tags: [Git, branch]
 image: /assets/img/post-title/gitLab-wallpaper.jpg
 ---
