카테고리 분류한거 롤백

--- a/_posts/API/2022-08-19-[API] - API란.md
+++ b/_posts/API/2022-08-19-[API] - API란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[API] - API란"
 date: 2022-08-19
-categories: API Concept
+categories: API 
 tags: [API]
 image: /assets/img/post-title/api-wallpaper.jpg
 ---
