--- a/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
+++ b/_posts/CKA/2024-07-17-[CKA] - etcd 백업하기.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[CKA] - etcd 백업하기"
 date: 2024-07-17
-categories: CKA Test
+categories: CKA
 tags: [Kubernetes, etcd, CKA]
 image: /assets/img/post-title/kubernetes-wallpaper.jpg
 ---
