--- a/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
+++ b/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[DB] - 서브쿼리란"
 date: 2022-12-06
-categories: DB Concept
+categories: DB 
 tags: [DB, 서브쿼리]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
