--- a/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
+++ b/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[Algorithm] - sha256이란"
 date: 2023-02-28
-categories: Algorithm Concept
+categories: Algorithm
 tags: [Algorithm, sha256]
 image: /assets/img/post-title/algorithm-wallpaper.jpg
 ---
