--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
@@ -2,7 +2,7 @@
 layout: post
 title: "[Gitlab] - 로컬 브랜치와 원격 브랜치"
 date: 2024.10.31
-categories: Gitlab Concept
+categories: Gitlab 
 tags: [Git, branch]
 image: /assets/img/post-title/gitLab-wallpaper.jpg
 ---
