Algorithm 제목 부분에서 [] 삭제

--- a/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
+++ b/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Algorithm] - sha256이란"
+title: "sha256이란"
 date: 2023-02-28
 categories: Algorithm
 tags: [Algorithm, sha256]
