Bash 제목 부분에서 [] 삭제

--- a/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
+++ b/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Bash] - 리다이렉션 기호 이해하기"
+title: "리다이렉션 기호 이해하기"
 date: 2023-02-08
 categories: Bash 
 tags: [Shell script, /dev/null, 2>&1]
