--- a/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
+++ b/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[DB] - DB데이터 특정 문자열 바꾸기"
+title: "DB데이터 특정 문자열 바꾸기"
 date: 2023-03-09
 categories: DB
 tags: [TRANSLATE, REPLACE]
