Gitlab 제목 부분에서 [] 삭제

--- a/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
+++ b/_posts/Gitlab/2024-10-31-[Gitlab] - 로컬 브랜치와 원격 브랜치.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Gitlab] - 로컬 브랜치와 원격 브랜치"
+title: "로컬 브랜치와 원격 브랜치"
 date: 2024.10.31
 categories: Gitlab 
 tags: [Git, branch]
