Linux 제목 부분에서 [] 삭제

--- a/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
+++ b/_posts/Linux/2022-08-01-[Linux] - 리눅스 메모리 캐시 삭제하기.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Linux] - 리눅스 메모리 캐시 삭제하기"
+title: "리눅스 메모리 캐시 삭제하기"
 date: 2022-08-01
 categories: Linux
 tags: [Linux, 메모리, 캐시]
