Web 제목 부분에서 [] 삭제

--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[Web] - 정적페이지와 동적페이지 차이"
+title: "정적페이지와 동적페이지 차이"
 date: 2022-08-08
 categories: Web
 tags: [Web, WAS, 동적페이지, 정적페이지]
