--- a/_posts/Vue/2022-07-05-[Vue] - 프로젝트 만들기.md
+++ b/_posts/Vue/2022-07-05-[Vue] - 프로젝트 만들기.md
@@ -7,36 +7,40 @@ tags: [Vue, VScode]
 image: /assets/img/post-title/vue-wallpaper.jpg
 ---
 
-## Vue 프로젝트 만들기:
-### 1. 세팅 환경
-* 개발 프로그램 설치하기
-    + 필자는 Visual Studio Code를 사용했다.
-[![텍스트](/assets/img/post/Vue/vscode%20%EC%84%A4%EC%B9%98%20%ED%9B%84%20%ED%99%94%EB%A9%B4.PNG)](/assets/img/post/Vue/vscode%20%EC%84%A4%EC%B9%98%20%ED%9B%84%20%ED%99%94%EB%A9%B4.PNG)
+## 1. Vue 프로젝트 만들기:
+### 1.1 환경 세팅하기 :
+
+- 필자는 Visual Studio Code를 사용했다.
+  
+![텍스트](/assets/img/post/Vue/vscode%20%EC%84%A4%EC%B9%98%20%ED%9B%84%20%ED%99%94%EB%A9%B4.PNG)
 > * [Visual Studio Code 설치하기](https://code.visualstudio.com/ "vscode 설치")
 
 * * *
 
-### 2. Vue CLI 설치
-```javascript
-npm install -g @vue/cli
+### 1.2 Vue CLI 설치하기 :
+```bash
+$ npm install -g @vue/cli
 ```
 
 * * *
 
-### 3. Vue 프로젝트 생성
-```javascript
--- vue/cli 3.x 이상일 경우
-vue create 프로젝트명
+### 1.3 Vue 프로젝트 생성하기 :
+```bash
+# -- vue/cli 3.x 이상일 경우
+$ vue create 프로젝트명
 
--- vue/cli 3.x 미만일 경우
-vue init webpack 프로젝트명
+# -- vue/cli 3.x 미만일 경우
+$ vue init webpack 프로젝트명
 ```
-<span style="color:#FA5858; font-size:12px">* 필자는 vue/cli 3.x 미만으로 생성했다.</span>
 
- - 실행하게 되면 프로젝트 생성하는 과정은 아래와 같다.
-[![텍스트](/assets/img/post/Vue/vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%83%9D%EC%84%B1.PNG)](/assets/img/post/Vue/vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%83%9D%EC%84%B1.PNG)
+> 필자는 vue/cli 3.x 미만으로 생성했다.
+{: .prompt-info}
 
-```javascript
+- 실행하게 되면 프로젝트 생성하는 과정은 아래와 같다.
+
+![텍스트](/assets/img/post/Vue/vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%83%9D%EC%84%B1.PNG)
+
+```bash
 # 프로젝트 이름
 ? Project name (vue-project):
 
@@ -75,16 +79,20 @@ vue init webpack 프로젝트명
 
 * * *
 
-### 4. Vue 프로젝트 실행
-```javascript
-npm run dev
+### 1.4 Vue 프로젝트 실행하기 :
+
+```bash
+$ npm run dev
 ```
-* 서버가 정상적으로 실행될 경우 아래 문구를 확인할 수 있다.
- ![텍스트](/assets/img/post/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%84%9C%EB%B2%84%20%EC%A3%BC%EC%86%8C.PNG)
 
- - 웹 브라우저에서 http://localhost:8080 로 이동하여 Vue 기본 화면을 확인할 수 있다.
+- 서버가 정상적으로 실행될 경우 아래 문구를 확인할 수 있다.
 
-* 프로그램 실행 시 아래 그림처럼 Vue 프로젝트 기본 화면이 나온다.
+![텍스트](/assets/img/post/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EC%84%9C%EB%B2%84%20%EC%A3%BC%EC%86%8C.PNG)
+
+* * *
+
+- 웹 브라우저에서 http://localhost:8080 로 이동하여 Vue 기본 화면을 확인할 수 있고, 프로그램 실행 시 아래 그림처럼 Vue 프로젝트 기본 화면이 나온다.
+
 ![텍스트](/assets/img/post/Vue/Vue%20%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8%20%EA%B8%B0%EB%B3%B8%ED%99%94%EB%A9%B4.PNG)
 
 * * *
