--- a/_posts/Vue/2022-07-15-[Vue] - 라이브러리 설치.md
+++ b/_posts/Vue/2022-07-15-[Vue] - 라이브러리 설치.md
@@ -7,53 +7,68 @@ tags: [Vue, VScode]
 image: /assets/img/post-title/vue-wallpaper.jpg
 ---
 
-## 라이브러기 설치하기:
+## 1. 라이브러기 설치하기 :
 - Vue 개발을 위해 필요한 라이브러리와 플러그인을 설치한다.
 
-### 1. vue element-ui(ui 컴포넌트) 설치 및 사용
+### 1.1 vue element-ui(ui 컴포넌트) 설치 및 사용하기 :
 - Terminal에서 elementui 설치
-```javascript
+
+```bash
 $ npm i element-ui -S
 ```
 
-- main.js에 빨간 박스 내용 입력
-[![텍스트](/assets/img/post/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/img/post/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
-<br>
-7~8번줄은 ElementUI 관련 내용 추가하였고, 10번줄은 element ui 사용하겠다는 의미다.
+* * *
 
-- element ui 적용
-[![텍스트](/assets/img/post/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)](../assets/img/post/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)
+- main.js에 빨간 박스 내용 입력한다.
 
-- 실행화면 확인
-[![텍스트](/assets/img/post/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/img/post/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
+![텍스트](/assets/img/post/Vue/element-ui%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+
+> 7~8번줄은 ElementUI 관련 내용 추가하였고, 10번줄은 element ui 사용하겠다는 의미다.
+{: .prompt-info}
+
+- element ui 적용한다.
+
+![텍스트](/assets/img/post/Vue/element-ui%20%EC%A0%81%EC%9A%A9.PNG)
+
+- 실행화면 확인한다.
+
+![텍스트](/assets/img/post/Vue/element-ui%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
 
-### 2. Apache ECharts(차트 라이브러리) 설치 및 사용
+### 1.2 Apache ECharts(차트 라이브러리) 설치 및 사용하기 :
+
 - Terminal에서 ECharts 설치
-```javascript
+
+```bash
 $ npm install echarts
 $ npm install echarts vue-echarts
 ===================================
--- Vue2(2.7.0) 이상일 경우 설치 필요
+# Vue2(2.7.0) 이상일 경우 설치 필요
 $ npm i -D @vue/composition-api
 ```
 
-- main.js에 아래 내용 입력
-[![텍스트](/assets/img/post/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)](../assets/img/post/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+- main.js에 아래 내용 입력한다.
 
-- 실행화면 확인
-[![텍스트](/assets/img/post/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)](../assets/img/post/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
+![텍스트](/assets/img/post/Vue/echart%20main.js%EC%97%90%20%EC%B6%94%EA%B0%80.PNG)
+
+- 실행화면 확인한다.
+
+![텍스트](/assets/img/post/Vue/echart%20%EC%8B%A4%ED%96%89%ED%99%94%EB%A9%B4.PNG)
 
 * * *
 
-### 3. Axios 설치 및 사용
+### 1.3 Axios 설치 및 사용하기 :
 - Terminal에서 Axios 설치
-```javascript
+
+```bash
 $ npm install axios
 ```
 
-- package.json에 Axios 추가 확인
-[![텍스트](/assets/img/post/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)](../assets/img/post/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)
+* * *
+
+- package.json에 Axios 추가 확인한다.
+
+![텍스트](/assets/img/post/Vue/axios%20%EC%84%A4%EC%B9%98%EB%B2%84%EC%A0%84%20%ED%99%95%EC%9D%B8.PNG)
 
 * * *
