각 제목별 번호 부여

--- a/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
+++ b/_posts/Bash/2023-02-08-[Bash] - 리다이렉션 기호 이해하기.md
@@ -8,15 +8,13 @@ image: /assets/img/post-title/bash-wallpaper.jpg
 ---
 
 
-## 리다이렉션 기호를 알고싶었던 계기:
+## 1. 리다이렉션 기호를 알고싶었던 계기 :
 - 스크립트 실행에 대한 결과를 직접 파일에 들어가서 보는게 아닌 텍스트 파일로 저장해놓고 윈도우도 볼 수 있었으면 해서 찾아보다 리다이렉션 기호를 알게되었고, 한번 알아두면 좋을거 같아서 작성하게되었다.
 
 * * *
 
-## 리다이렉션이란?:
+## 2. 리다이렉션이란? :
 - 방향을 변경하는 것을 의미하며, 파일로 표준 입력을 받고, 파일로 표준 출력을 받는 등의 기능을 의미한다.
-
-* * *
 
 | 리다이렉션 기호 | 방향      | 의미                                                 |
 | --------------- | --------- | ---------------------------------------------------- |
@@ -26,7 +24,7 @@ image: /assets/img/post-title/bash-wallpaper.jpg
 
 * * *
 
-## 파일 디스크립터:
+## 3. 파일 디스크립터 :
 - 표준 입력과 표준 출력 그리고 표준 에러를 쉘이나 시스템 프로그래밍에서는 숫자로도 표현할 수 있는거다.
 
 | 파일디스크립터 | 이름   | 용도                                | 표준장치 |
@@ -72,17 +70,19 @@ $ 명령 2>&1 파일명
 ```
 * * *
 
-## /dev/null 이해하기:
+## 4. /dev/null 이해하기 :
 - 리눅스에서 쓰레기통과 같다.
 - 데이터를 죄다 없앤다.
+
 ```bash
 $ /script.sh > /dev/null
 ```
 
 * * *
 
-## 2>&1 이해하기:
+## 5. 2>&1 이해하기 :
 - 출력 결과와 함께 에러 내용도 없앤다.
+
 ```bash
 $ /script.sh > /dev/null 2>&1
 ```
