--- a/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
+++ b/_posts/DB/2022-12-06-[DB] - 서브쿼리란.md
@@ -7,14 +7,15 @@ tags: [DB, 서브쿼리]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
-## 서브쿼리란?:
+## 1. 서브쿼리란? :
 - 하나의 SQL 문에 포함되어 있는 또 다른 SQL문이다.
 - 가장 일반적으로는 WHERE절에서 사용하고, 위치에 따라 SELECT, FROM, WHERE절에서 사용한다.
 
 * * *
 
-## SELECT절 서브쿼리:
+## 2. SELECT절 서브쿼리 :
 - 스칼라 서브쿼리 (Scalar Subqueries)​라고 불리며, SELECT 절 안에 서브쿼리가 들어있다.
+
 ```sql
 SELECT column1,
        ( SELECT tableB.column1
@@ -27,9 +28,10 @@ WHERE tableA.column1 = 'name';
 
 * * *
 
-## FROM절 서브쿼리:
+## 3. FROM절 서브쿼리 :
 - 인라인뷰 (Inline Views)라고 불리며, FROM 절 안에 서브쿼리가 들어있다.
 - 반드시 서브쿼리 결과는 하나의 테이블로 리턴되어야한다.
+
 ```sql
 SELECT column1, column2
 FROM ( SELECT tableA.column1.column1 AS columnname1,
@@ -40,9 +42,10 @@ FROM ( SELECT tableA.column1.column1 AS columnname1,
 
 * * *
 
-## WHERE절 서브쿼리:
+## 4, WHERE절 서브쿼리 :
 - 중첩 서브쿼리 (Nested Subqueries)라고 불리며, WHERE 절 안에 서브쿼리가 들어있다.
 - 가장 자주 쓰이는 대중적인 서브쿼리이며 단일행과 복수행 둘 다 리턴이 가능하다.
+
 ```sql
 SELECT *
 FROM tableA
