--- a/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.md
+++ b/_posts/DB/2023-02-15-[DB] - 저장 프로시저란.md
@@ -7,12 +7,12 @@ tags: [DB, Procedure]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
-## 저장 프로시저(Stored Procedure)를 알고싶었던 계기:
+## 1. 저장 프로시저(Stored Procedure)를 알고싶었던 계기 :
 - Stored Procedure에서 사용중인 쿼리가 느리다고 DB 엔지니어와 얘기를 하다가 조치 및 지원부분에 대해서 확인요청 하던 중 Stored Procedure 소스를 준비해달라고 요청하였고, 나는 Stored Procedure에 대해서 몰랐기에 알고 싶었다.
 
 * * *
 
-## 저장 프로시저(Stored Procedure)란?:
+## 2. 저장 프로시저(Stored Procedure)란? :
 ```sql
 DELIMITER $$
 CREATE PROCEDURE 'TEST_PROC' (
@@ -40,23 +40,23 @@ DELIMITER ;
 
 * * *
 
-## 저장 프로시저(Stored Procedure) 장점:
-### 보안성 향상
+## 3. 저장 프로시저(Stored Procedure) 장점 :
+### 3.1 보안성 향상 :
 - 프로시저 단위로 실행 권한을 부여할 수 있기 때문에, 기본적인 보안 사고에 대처가 유연한 편이다.
 
-### 네트워크 소요 시간 절감
+### 3.2 네트워크 소요 시간 절감 :
 - 쿼리를 다중으로 실행하는 경우, 한번의 호출을 통해 다중의 쿼리가 실행되기 때문에 네트워크에 대한 부담과 소요 시간을 줄일 수 있다.
 
-### 운영 배포 용이성
+### 3.3 운영 배포 용이성 :
 - 별도의 WAS 서버 재기동 없이 SP 수정으로 조회, 수정, 추가 등의 가벼운 소스 변경 등이 가능하여, 긴급 배포 등이 용이하다.
 
 * * *
 
-## 저장 프로시저(Stored Procedure) 단점:
-### 낮은 처리 성능
+## 4. 저장 프로시저(Stored Procedure) 단점 :
+### 4.1 낮은 처리 성능 :
 - 프로시저의 경우 성능이나 최적화가 부족하여 수행 능력이 떨어지며, 특히 문자열이나 숫자 연산에 사용하면 JAVA, C 등에 비해서 효율이 좋지 않다.
 
-### 디버깅 및 유지보수의 어려움
+### 4.2 디버깅 및 유지보수의 어려움 :
 - 배포, 버전 관리 등에 대한 이력 관리가 힘들고, 쿼리 수정된 경우 현재 운영 중인 서비스에 영향도 분석이 어렵다.
 
 * * *
