--- a/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
+++ b/_posts/DB/2023-03-09-[DB] - DB데이터 특정 문자열 바꾸기.md
@@ -7,17 +7,17 @@ tags: [TRANSLATE, REPLACE]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
-## DB데이터 특정 문자열 바꾸기를 알고 싶었던 계기:
+## 1. DB데이터 특정 문자열 바꾸기를 알고 싶었던 계기 :
 - 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식에서 특수문자를 치환하여 적용되어있어 인사연동 진행 시 변경된 특수문자를 치환해야하기 때문이다.
 
 * * *
 
-## REPLACE란?:
+## 2. REPLACE란? :
 - 특정 문자열을 찾아 다른 문자열로 바꾸는 함수이다.
 
 * * *
 
-### REPLACE 사용법:
+### 2.1 REPLACE 사용법 :
 ```sql
 SELECT
   REPLACE('String' or CULUMN, 'From_String', 'To_String')
@@ -25,13 +25,14 @@ FROM
   table
 ```
 
-### REPLACE 예시:
+### 2.2 REPLACE 예시 :
 - 아무래도 사용법으로만 보고는 이해하기 어려울거 같아 아래와 같이 예시 쿼리문을 작성하였다.
-[![텍스트](/assets/img/post/DB/REPLACE%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png){: width="400" height="400"}](/assets/img/post/DB/REPLACE%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png)
+
+![텍스트](/assets/img/post/DB/REPLACE%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png)
 
 * * *
 
-### REPLACE 다중으로 사용하기:
+### 2.3 REPLACE 다중으로 사용하기 :
 - 문자열 바꾸는 과정에서 한개가 아닌 여러개의 문자열을 변경하고 싶은 경우가 있을거다.
 - 아래 쿼리문과 같이 **'String' or CULUMN**부분에 REPLACE 함수를 넣어 계속 넣는다.
 
@@ -49,12 +50,12 @@ FROM
 
 * * *
 
-## TRANSLATE란?:
+## 3. TRANSLATE란? :
 - 대상문자와 변환문자는 1:1로 변환이되며, 대상문자에는 있는데 변환문자에는 없으면 해당 문자는 제거된다.
 
 * * *
 
-### TRANSLATE 사용법:
+### 3.1 TRANSLATE 사용법 :
 ```sql
 SELECT
   TRANSLATE('String' or CULUMN, 'From_String', 'To_String')
@@ -62,8 +63,9 @@ FROM
   table
 ```
 
-### TRANSLATE 예시:
+### 3.2 TRANSLATE 예시 :
 - 아무래도 사용법으로만 보고는 이해하기 어려울거 같아 아래와 같이 예시 쿼리문을 작성하였다.
-[![텍스트](/assets/img/post/DB/Translate%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png){: width="400" height="400"}](/assets/img/post/DB/Translate%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png)
+
+![텍스트](/assets/img/post/DB/Translate%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC%EB%AC%B8.png)
 
 * * *
