--- a/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
+++ b/_posts/DB/2023-03-11-[DB] - DB데이터 문자열 자르기.md
@@ -7,17 +7,17 @@ tags: [SUBSTR]
 image: /assets/img/post-title/db-wallpaper.jpg
 ---
 
-## DB데이터 문자열 자르기를 알고 싶었던 계기:
+## 1. DB데이터 문자열 자르기를 알고 싶었던 계기 :
 - 고객사 인사연동 DB의 사용자 패스워드가 sha256 방식에서 데이터앞에 특수문자를 적용하였다. BASE64 인코딩 방식 적용 후 맨앞에 특수문자를 2개를 추가하였기 때문에 인사연동 진행 시 변경된 특수문자 2개를 지우고 가져와야하기 때문이다.
 
 * * *
 
-## SUBSTR이란?:
+## 2. SUBSTR이란? :
 - 일정 문자열에서 선택한 길이 만큼만 잘라 가져올 있는 함수이다.
 
 * * *
 
-## SUBSTR 사용법:
+## 3. SUBSTR 사용법 :
 - 아래 쿼리문은 앞에서부터 문자열 자르기이다.
 
 ```sql
@@ -29,14 +29,15 @@ FROM
 
 * * *
 
-### SUBSTR 예시(앞에서 문자열 자르기):
+### 3.1 SUBSTR 예시(앞에서 문자열 자르기) :
 - 아무래도 사용법으로만 보고는 이해하기 어려울거 같아 아래와 같이 예시 쿼리문을 작성하였다.
-[![텍스트](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC.PNG){: width="400" height="400"}](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC.PNG)
+
+![텍스트](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC.PNG)
 
 * * *
 
-### SUBSTR 예시(뒤에서 문자열 자르기):
+### 3.2 SUBSTR 예시(뒤에서 문자열 자르기) :
 - 아무래도 사용법으로만 보고는 이해하기 어려울거 같아 아래와 같이 예시 쿼리문을 작성하였다.
-[![텍스트](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC(%EB%92%A4%EC%97%90%EC%84%9C%EB%B6%80%ED%84%B0).PNG){: width="400" height="400"}](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC(%EB%92%A4%EC%97%90%EC%84%9C%EB%B6%80%ED%84%B0).PNG)
 
+![텍스트](/assets/img/post/DB/SUBSTR%20%EC%98%88%EC%8B%9C%20%EC%BF%BC%EB%A6%AC(%EB%92%A4%EC%97%90%EC%84%9C%EB%B6%80%ED%84%B0).PNG)
 * * *
