--- a/_posts/API/2022-08-19-[API] - API란.md
+++ b/_posts/API/2022-08-19-[API] - API란.md
@@ -7,14 +7,15 @@ tags: [API]
 image: /assets/img/post-title/api-wallpaper.jpg
 ---
 
-## API란?:
+## 1. API란? :
 - Application Programing Interface에 약자로, 응용 프로그램에서 사용할 수 있도록 운영 체제나 프로그래밍 언어가 제공하는 기능을 제어할 수 있게 만든 인터페이스다.
 
-<span style="color:#FA5858; font-size:12px">※ 인터페이스란? : 서로 다른 두 개의 시스템, 장치 사이에서 정보나 신호를 주고받는 경우의 접점이나 경계면이다.</span>
+> 인터페이스란? : 서로 다른 두 개의 시스템, 장치 사이에서 정보나 신호를 주고받는 경우의 접점이나 경계면이다.
+{: .prompt-info}
 
 * * *
 
-### API 흐름도:
+### 1.1 API 흐름도 :
 - API를 음식점에 점원으로 비유한다면 점원은 손님에게 메뉴를 알려주고 주방에 주문받은 요리를 요청한다음 주방에서 완성된 요리를 손님께 다시 전달하는 역할을 한다. <br>
 즉, API는 손님(프로그램)이 주문할 수 있게 메뉴(명령 목록)를 정리하고, 주문(명령)을 받으면 요리사(응용프로그램)와 상호작용하여 요청된 메뉴(명령에 대한 값)를 전달한다.
 
@@ -22,7 +23,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 
 * * *
 
-### API 접근방식:
+### 1.2 API 접근방식 :
 - API의 접근 방식에는 크게 세가지가 존재한다.
   - Private API : API를 기업이나 연구 단체 등에서 사용하는 다양한 애플리케이션과 시스템의 통합을 위해 사용하는 것으로 단체 내부에서만 사용할 수 있도록 한다.
   - Partner API : API를 특정 비즈니스 파트너와 공유하는 것으로, 공유받은 API를 품질 저하 없이 사용할 수 있으며 수익 창출을 목표로 사용한다.
@@ -30,7 +31,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 
 * * *
 
-### API 장점:
+### 1.3 API 장점 :
 1. HTTP 프로토콜의 인프라를 그대로 사용하므로 REST API 사용을 위한 별도의 인프라를 구출할 필요가 없다.
 2. HTTP 프로토콜의 표준을 최대한 활용하여 여러 추가적인 장점을 함께 가져갈 수 있게 해준다.
 3. HTTP 표준 프로토콜에 따르는 모든 플랫폼에서 사용이 가능하다.
@@ -40,7 +41,7 @@ image: /assets/img/post-title/api-wallpaper.jpg
 
 * * *
 
-### API 단점:
+### 1.4 API 단점 :
 1. 표준이 존재하지 않는다.
 2. 사용할 수 있는 메소드가 4가지 밖에 없다.
 3. HTTP Method 형태가 제한적이다.
