--- a/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
+++ b/_posts/Algorithm/2023-02-28-[알고리즘] - sha256이란.md
@@ -7,17 +7,17 @@ tags: [Algorithm, sha256]
 image: /assets/img/post-title/algorithm-wallpaper.jpg
 ---
 
-## sha256을 알고싶었던 계기:
+## 1. sha256을 알고싶었던 계기:
 - SI사업 지원을 하면서 사용자 패스워드 암호화를 sha256 방식으로 진행하여 왜 많은 암호화 방식 중에서 sha256를 사용하는지 궁금해서다.
 
 * * *
 
-## 암호화란?:
+## 2. 암호화란?:
 - 코딩된 알고리즘, 해시, 서명 사용을 통해 정보를 보호하는 방식이다.
 
 * * *
 
-## 암호화 주요목표:
+## 3. 암호화 주요목표:
 - 기밀성 : 권한이 있는 사용자만 정보를 사용할 수 있도록 한다.
 - 무결성 : 정보가 조작되지 않도록 한다.
 - 인증 : 정보 또는 사용자 자격 증명의 신뢰성을 확인한다.
@@ -25,13 +25,13 @@ image: /assets/img/post-title/algorithm-wallpaper.jpg
 
 * * *
 
-## sha256이란?:
+## 4. sha256이란?:
 - SHA 알고리즘의 한 종류로써 256비트로 구성되며 64자리 문자열을 반환한다.
 - 단방향 암호화 방식이기 때문에 복호화가 불가능 하다는 것이 큰 특징이다.
 
 * * *
 
-### sha256과정:
+### 5. sha256과정:
 1. 전처리 : 문자열을 패딩하고 작은 블록으로 나누고 초기 값을 설정한다.
 2. 해시계산 : 여러 연산을 이용하여 256비트의 해시값을 계산한다.
 
