각 제목별 번호 부여

--- a/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
+++ b/_posts/Helm/2024-02-14-[Helm] - Helm이란.md
@@ -7,16 +7,17 @@ tags: [Helm, Kubernetes]
 image: /assets/img/post-title/helm-wallpaper.jpg
 ---
 
-## Helm이란?:
+## 1. Helm이란? :
 - 쿠버네티스 오픈 소스 패키지 매니저이다.
 - ubuntu의 ***apt***, Mac의 ***brew***, Node의 ***npm***과 같이 패키지를 설치, 업데이트, 수정, 삭제하는 작업을 편리하고 안전하게 수행하기 위해 사용되는 툴이다.
 
 * * *
 
-## Helm의 주요 개념 3가지:
+## 2. Helm의 주요 개념 3가지 :
 - ***Chart(차트)*** : 헬름 패키지로, k8s cluster에서 애플리케이션이 기동되기 위해 필요한 모든 리소스들이 포함되어있다.
 - ***Repository(저장소)*** : 차트 저장소로, 차트를 모아두고 공유하는 장소이다.
 - ***Realease(릴리즈)*** : k8s cluster에서 구동되는 차트 인스턴스
+
 ```html
 🙌 Helm 연계 순서 🙌
 1. k8s cluster 내부에 Helm Chart를 원하는 Repository에서 검색 후 설치
@@ -25,8 +26,9 @@ image: /assets/img/post-title/helm-wallpaper.jpg
 
 * * *
 
-## Helm 설치하기:
+## 3. Helm 설치하기 :
 - 아래와 같이 Helm 설치를 진행한다.
+
 ```bash
 # scripts로 설치
 $ curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
@@ -42,7 +44,7 @@ $ mv linux-amd64/helm /usr/local/bin/helm
 
 * * *
 
-## Helm 버전 확인하기:
+## 4. Helm 버전 확인하기 :
 ```bash
 $ helm version
 ```
@@ -50,7 +52,7 @@ $ helm version
 
 * * *
 
-## Helm Repostory(저장소) 추가하기:
+## 5. Helm Repostory(저장소) 추가하기 :
 - Stable이라는 이름으로 Repository를 추가한다.
 
 ```bash
@@ -61,7 +63,7 @@ $ helm search repo stable
 
 * * *
 
-## Helm Chart 설치해보기:
+## 6. Helm Chart 설치해보기 :
 - 테스트 진행을 위해 Stable Repo 내에 prometheus가 있는지 확인하고, chart를 설치한다.
 
 ```bash
@@ -70,6 +72,8 @@ $ helm search repo prometheus
 $ helm install prometheus-test stable/prometheus
 ```
 ![Helm repo stable 에러 발생](/assets/img/post/kubernetes/Helm%20repo%20stable%20에러%20발생.png)
+
+* * *
 
 - helm chart 저장소 stable은 helm v3 부터 해당 저장소의 대한 공시적인 지원을 종료하였다고 하여, 비공식 저장소 중 대표적인 bitnami를 사용한다.
 
