--- a/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
+++ b/_posts/Web/2022-08-08-[Web] - 정적페이지와 동적페이지.md
@@ -7,43 +7,55 @@ tags: [Web, WAS, 동적페이지, 정적페이지]
 image: /assets/img/post-title/web-wallpaper.jpg
 ---
 
-## 정적페이지와 동적페이지에 대해 알고 싶었던 계기 :
+## 1. 정적페이지와 동적페이지에 대해 알고 싶었던 계기 :
 - WEB과 WAS 기능에 대해서 정리를 하다보니, 페이지 요청에 따라서 정적 페이지와 동적 페이지를 제공한다고 하는데 무슨 말인지 몰라 작성하게되었다.
 
 * * *
 
-## 정적페이지와 동적페이지란? :
+## 2. 정적페이지와 동적페이지란? :
 - 인터넷을 이용하면서 접속하게 되는 웹 페이지는 컴퓨터에 저장된 메모장 파일을 열어보듯이 그대로 보는 **정적 웹 페이지**, 다른 변수들에 의해서 변경되어 보이는 **동적 웹 페이지** 두가지로 나뉜다.
 
 * * *
 
-### 정적페이지란? :
+### 2.1 정적페이지란? :
 - 웹 서버에 이미 저장된 HTML 문서를 클라이언트에게 전송하는 웹 페이지
 - 사용자는 서버에 저장된 데ㅣ터가 변경되지 않는 한 고정된 웹 페이지를 보게된다.
 - 모든 사용자는 같은 결과의 웹 페이지를 서버에 요청하고 응답 받는다.<br>
-<span style="color:#FA5858; font-size:12px">※ EX) : 홈페이지에 회사소개, 포트폴리오 등 내용이 변하지 않고 고정적인 페이지</span>
 
-### 정적페이지 장점 :
+> EX) : 홈페이지에 회사소개, 포트폴리오 등 내용이 변하지 않고 고정적인 페이지
+{: .prompt-example}
+
+* * *
+
+### 2.2 정적페이지 장점 :
 - 요청에 대한 파일만 전송하면 되기 때문에 서버간 통신이 거의 없고 속도가 빠르다.
 - 백업, 복원이 쉽다.
 
-### 정적페이지 단점 :
+* * *
+
+### 2.3 정적페이지 단점 :
 - 저장된 정보만 보여주기 때문에 서비스가 한정적이다.
 - 추가, 수정, 삭제 등의 작업을 서버에서 직접 다운받아 편집 후 업로드도 수정으로 해줘야 하기 때문에 관리자 힘들다.
 
 * * *
 
-### 동적페이지란? :
+### 2.4 동적페이지란? :
 - 요청 정보를 처리한 후에 제작된 HTML 문서를 클라이언트에게 전송하는 웹 페이지
 - 사용자는 상황, 시간, 요청 등에 따라 달라지는 웹 페이지를 보게된다.
 - 같은 페이지라도 사용자마다 다른 결과의 웹페이지를 서버에 요청하고 받을 수 있다.<br>
-<span style="color:#FA5858; font-size:12px">※ EX) : 네이버 블로그, 티스토리, 홈페이지 게시판 등</span>
 
-### 동적페이지 장점 :
+> EX) : 네이버 블로그, 티스토리, 홈페이지 게시판 등
+{: .prompt-example}
+
+* * *
+
+### 2.5 동적페이지 장점 :
 - 다양한 정보를 조합하여 웹 페이지를 제공 하기 때문에 서비스가 다양하다.
 - 웹 사이트 구조에 따라 추가, 수정, 삭제를 사용자측에서 가능하기 때문에 관리가 쉽다.
 
-### 동적페이지 단점 :
+* * *
+
+### 2.6 동적페이지 단점 :
 - 사용자에게 웹 페이지를 전달하기 전에 처리하는 작업이 필요하기 때문에 상대적으로 느리다.
 - 백업, 복원이 상대적으로 어렵다.
 
