--- a/_posts/IAC/2023-01-26-[IAC] - IAC란.md
+++ b/_posts/IAC/2023-01-26-[IAC] - IAC란.md
@@ -7,26 +7,26 @@ tags: [Terraform, Ansible]
 image: /assets/img/post-title/lac-wallpaper.jpg
 ---
 
-## Infrastructure as Code(IAC)란?:
+## 1. Infrastructure as Code(IAC)란? :
 - IT 인프라를 코드 기반으로 자동 설치 및 구축/관리/프로비저닝 하는 프로세스를 말하며 관련 도구들이 나오면서 자동화된 인프라 구축이 가능하다.
 
 * * *
 
-## IAC 특징:
+## 2. IAC 특징 :
 - 모든 것을 코드로 정의한다.
 - 코드를 지속적으로 테스트하고 딜리버리한다.
 - 시스템을 작고 간단하게 빌드한다.
 
 * * *
 
-## IAC 장점:
+## 3. IAC 장점 :
 - 자동화를 제공하여 비용절감
 - 스크립트를 실행하여 안전한 인프라를 간단하고 빠르게 구축하여 배포 속도 향상
 - 변경사항에 대하여 여러 번 적합한 구성을 지속적으로 배포하기에 오류 감소
 
 * * *
 
-## IAC 툴:
+## 4. IAC 툴 :
 - Chef
 - Puppet
 - Ansible
