--- a/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .md
+++ b/_posts/Markdown/2022-08-18-[MarkDown] - 마크다운 사용법 .md
@@ -7,12 +7,12 @@ tags: [MarkDown, Log]
 image: /assets/img/post-title/markdown-wallpaper.jpg
 ---
 
-## 마크다운(MarkDown)은 무엇인가?:
+## 1. 마크다운(MarkDown)은 무엇인가? :
 - 산문을 읽고, 쓰고, 편집하기 쉬운 목적으로 만들어진 문서 작성을 위한 형식으로 사용되며, 문법이 간결하고 HTML삽입이 가능하다.
 
 * * *
 
-### 마크다운(MarkDown) 장/단점:
+### 1.1 마크다운(MarkDown) 장/단점 :
 **[마크다운 장점]**
 1. 문법이 쉽다.
 2. 관리가 쉽다.
@@ -26,9 +26,10 @@ image: /assets/img/post-title/markdown-wallpaper.jpg
 
 * * *
 
-### 마크다운(MarkDown) 문법:
-#### 제목(Header)
+### 1.2 마크다운(MarkDown) 문법 :
+#### 1.2.1 제목(Header) :
 - #으로 시작하는 텍스트다.
+
 ```
 # This is an H1
 ## This is an H2
@@ -37,11 +38,11 @@ image: /assets/img/post-title/markdown-wallpaper.jpg
 ##### This is an H5
 ###### This is an H6
 ```
-[![텍스트](/assets/img/post/Markdown/%EC%A0%9C%EB%AA%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%EC%A0%9C%EB%AA%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%EC%A0%9C%EB%AA%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
-#### 수평선(Horizontal Rules)
+#### 1.2.2 수평선(Horizontal Rules) :
 - '-' 또는 '*' 또는 '_' 을 3개 이상 작성한다.
 
 ```
@@ -51,12 +52,13 @@ image: /assets/img/post-title/markdown-wallpaper.jpg
 - - -
 -------------------
 ```
-[![텍스트](/assets/img/post/Markdown/%EC%88%98%ED%8F%89%EC%84%A0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%EC%88%98%ED%8F%89%EC%84%A0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%EC%88%98%ED%8F%89%EC%84%A0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
-#### 강조(Emphasis)
+#### 1.2.3 강조(Emphasis) :
 - #으로 시작하는 텍스트다.
+
 ```
 _This will also be italic_
  
@@ -66,23 +68,24 @@ _This will also be italic_
  
 _You **can** ~~combine~~ them_
 ```
-[![텍스트](/assets/img/post/Markdown/%EA%B0%95%EC%A1%B0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%EA%B0%95%EC%A1%B0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%EA%B0%95%EC%A1%B0%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
-#### 인용(Blockquotes)
+#### 1.2.4 인용(Blockquotes) :
 - '>'는 3개까지 가능하다.
+
 ```
 > I’ve always been more interested in the future than in the past.    
 > This is a first blockquote.
 > > This is a second blockquote.
 > > > This is a third blockquote.
 ```
-[![텍스트](/assets/img/post/Markdown/%EC%9D%B8%EC%9A%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%EC%9D%B8%EC%9A%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%EC%9D%B8%EC%9A%A9%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
-#### 목록(List)
+#### 1.2.5 목록(List) :
 - '<ol>', '<ul>' 목록 태그로 변환된다.
 
 ```
@@ -100,11 +103,11 @@ _You **can** ~~combine~~ them_
   * 별표(asterisks)
   + 더하기(plus sign)
 ```
-[![텍스트](/assets/img/post/Markdown/%EB%AA%A9%EB%A1%9D%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%EB%AA%A9%EB%A1%9D%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%EB%AA%A9%EB%A1%9D%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 * * *
 
-#### 이미지(Images)
+#### 1.2.6 이미지(Images) :
 - 링크와 비슷하지만 앞에 !가 붙는다.
 - 이미지의 사이즈를 변경하기 위해서는 <img width="OOOpx" height="OOOpx"></img>와 같이 표현한다.
 
@@ -118,11 +121,11 @@ Ex) ![텍스트](이미지파일경로.jpg "이미지이름")
 # 이미지에 링크 설정
 Ex) [![텍스트](이미지URL)]( 링크URL )
 ```
-[![텍스트](/assets/img/post/mini_profile.png)](/assets/img/post/mini_profile.png)
+![텍스트](/assets/img/post/mini_profile.png)
 
 * * *
 
-#### 테이블(Table)
+#### 1.2.7 테이블(Table) :
 - 헤더와 셀을 구분할 때 3개 이상의 -(hyphen/dash) 기호가 필요하다.
 - 헤더 셀을 구분하면서 ':' 기호로 셀(열/칸) 안에 내용을 정렬할 수 있다.
 
@@ -135,7 +138,7 @@ Ex) [![텍스트](이미지URL)]( 링크URL )
 | 셀5   | 셀6   | 셀7   | 셀8   |
 | 셀9   | 셀10  | 셀11  | 셀12  |
 ```
-[![텍스트](/assets/img/post/Markdown/%ED%85%8C%EC%9D%B4%EB%B8%94%20%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)](/assets/img/post/Markdown/%ED%85%8C%EC%9D%B4%EB%B8%94%20%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
+![텍스트](/assets/img/post/Markdown/%ED%85%8C%EC%9D%B4%EB%B8%94%20%EB%AC%B8%EB%B2%95%20%EA%B2%B0%EA%B3%BC.PNG)
 
 - 아래 링크 클릭하여 Markdown 표를 쉽게 만들 수 있다.<br>
 [Markdown 테이블 만들기](https://www.tablesgenerator.com/markdown_tables)
