--- a/_posts/Test/2023-01-31-[TEST] - TDD란.md
+++ b/_posts/Test/2023-01-31-[TEST] - TDD란.md
@@ -7,29 +7,30 @@ tags: [Test]
 image: /assets/img/post-title/tdd-wallpaper.jpg
 ---
 
-## TDD를 알고싶었던 계기:
+## 1. TDD를 알고싶었던 계기 :
 - IAC를 공부하는 과정에서 우연히 TDD라는 단어를 보게되어 검색하였더니 개발소스 테스트 관련된 사항이라 알아야할 거 같아 작성하게되었다.
 
 * * *
 
-## Test Driven Development(TDD)란?:
+## 2. Test Driven Development(TDD)란? :
 - 테스트 주도 개발이라 한다.
 - 반복 테스트를 이용한 소프트웨어 방법론으로, 작은 단위의 테스트 케이스를 작성하고 이를 통과하는 코드를 추가하는 단계를 반복하여 구현한다.
 
 * * *
 
-## TDD 개발주기:
-[![텍스트](/assets/img/post/TEST/TDD%20%EA%B0%9C%EB%B0%9C%EC%A3%BC%EA%B8%B0.PNG)](/assets/img/post/TEST/TDD%20%EA%B0%9C%EB%B0%9C%EC%A3%BC%EA%B8%B0.PNG)
+## 3. TDD 개발주기 :
+![텍스트](/assets/img/post/TEST/TDD%20%EA%B0%9C%EB%B0%9C%EC%A3%BC%EA%B8%B0.PNG)
 
 - <span style="color:#FE2E2E">실패[RED]</span> : 문제 정의 단계로, 실패하는 테스트 코드를 실제 코드보다 먼저 작성한다.
 - <span style="color:#04B431">성공[GREEN]</span> : 문제 해결 단계로, 테스트를 성공할 수 있는 최소한의 실제코드를 작성한다.
 - <span style="color:#5882FA">리팩토링[BLUE]</span>: 불필요하고 비효율 적인 코드를 개선한다.
 
-**※ 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.**
+> 위와 같은 방법으로 실제코드에 대해 기대되는 바를 보다 명확하게 정의함으로써 불필요한 설계를 피할 수 있고, 정확한 요구 사항에 집중 가능하다.
+{: .prompt-info}
 
 * * *
 
-## TDD의 효과:
+## 4. TDD의 효과 :
 - 디버깅 시간을 단출 할 수 있다.
   - <span style="color:#01DFA5">자동화 된 유닛테스팅</span>을 전재하므로 <span style="color:#01DFA5">특정 버그</span>를 손쉽게 찾을 수 있다. 
 - 코드가 내손을 벗어나기 전에 가장 빠르게 피드백을 받을 수 있다.
