각 제목별 번호 부여

--- a/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
+++ b/_posts/Linux/2024-01-08-[Linux] - LVM 생성하기.md
@@ -7,19 +7,19 @@ tags: [LVM, DISK]
 image: /assets/img/post-title/linux-wallpaper.jpg
 ---
 
-## LVM(Logical Volume Manager)란?:
+## 1. LVM(Logical Volume Manager)란? :
 - 논리 볼륨 관리자라는 뜻으로, 우리가 사용하는 물리적인 디스크 여러개를 논리적인 디스크로 할당하여 유연하게 관리할 수 있게 해주는 기능이다.
 - Linux 환경에서 저장 공간(=하드 디스크)를 효과적으로 관리하기 위해 제공하는 제공되는 커널 기능이다.
 
 * * *
 
-### LVM(Logical Volume Manager)의 장점:
+### 1.1 LVM(Logical Volume Manager)의 장점 :
 - 디스크 공간을 쉽게 확장할 수 있다.
 - 여러 개의 디스크 공간을 합쳐서 하나처럼 사용할 수 있다.
 
 * * *
 
-## LVM(Logical Volume Manager) 관련 용어 및 구성:
+## 2. LVM(Logical Volume Manager) 관련 용어 및 구성 :
 * 물리적 볼륨 / PV(Physical Volume)
   - 실제 디스크 장치를 분할한 파티션된 상태를 의미
   - /dev/sda1, /dev/sdb1 등의 파티션
@@ -45,8 +45,9 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 
 * * *
 
-## LVM(Logical Volume Manager) 작업 순서:
+## 3. LVM(Logical Volume Manager) 작업 순서 :
 - System Partition ID 변경
+
 ```bash
 $ fdisk /dev/sdb
 n (new, 파티션 생성)
@@ -64,6 +65,7 @@ w (저장 후 나가기)
 * * *
 
 - PV 생성 및 VG 확장
+
 ```bash
 # PV 생성
 $ pvcreate /dev/sdb
@@ -74,6 +76,7 @@ $ vgcreate [vg이름] /dev/sdb
 * * *
 
 - LV 확장
+
 ```bash
 # 예시) vcreate -n lv_mgmt -l 100%FREE vg_mgmt
 $ lvcreate -n [VG이름] -l [PE사이즈 크기] [VG이름]
@@ -82,6 +85,7 @@ $ lvcreate -n [VG이름] -l [PE사이즈 크기] [VG이름]
 * * *
 
 - 파일시스템 리사이징
+
 ```bash
 # mkfs.xfs /dev/mapper/vg_mgmt-lv_mgmt
 $ mkfs.xfs [XFS파일시스템 생성할 디바이스 경로]
