--- a/_posts/Linux/2023-05-21-[Linux] - 도메인 흐름 이해하기.md
+++ b/_posts/Linux/2023-05-21-[Linux] - 도메인 흐름 이해하기.md
@@ -7,7 +7,7 @@ tags: [IP, 도메인]
 image: /assets/img/post-title/linux-wallpaper.jpg
 ---
 
-## 네임서버란?:
+## 1. 네임서버란? :
 - DNS(Dnmain Name System) 서버라고도 하며, 우리가 웹 브라우저나 FTP 클라이언트를 사용할 때 http://www.nate.com 또는 ftp://mirrors.kernel.org/ 등과 같은 URL을 사용한다.
 - DNS는 도메인 주소를 IP주소로 변환하는 역할을 하여 사용자가 URL 입력한 주소를 DNS서버를 통해 IP주소를 가져온 다음 서버와 통신하게한다.
 
@@ -18,7 +18,7 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 
 * * *
 
-### 도메인 URL 정의:
+### 1.1 도메인 URL 정의 :
 - 도메인 URL을 https://hwangyoonjae.github.io/me로 브라우저에 검색 했다고 가정한다.
   - http:// : 통신에 사용된 프로토콜
   - github.io : 서버의 도메인
@@ -27,8 +27,9 @@ image: /assets/img/post-title/linux-wallpaper.jpg
 
 * * *
 
-## DNS의 역할:
+## 2. DNS의 역할 :
 - 도메인 주소를 IP주소로 변환하는 역할을 한다.
-[![도메인 주소 IP 획득 과정](/assets/img/post/Linux/%EB%8F%84%EB%A9%94%EC%9D%B8%20%EC%A3%BC%EC%86%8C%20IP%20%ED%9A%8D%EB%93%9D%20%EA%B3%BC%EC%A0%95.PNG)](/assets/img/post/Linux/%EB%8F%84%EB%A9%94%EC%9D%B8%20%EC%A3%BC%EC%86%8C%20IP%20%ED%9A%8D%EB%93%9D%20%EA%B3%BC%EC%A0%95.PNG)
+
+![도메인 주소 IP 획득 과정](/assets/img/post/Linux/%EB%8F%84%EB%A9%94%EC%9D%B8%20%EC%A3%BC%EC%86%8C%20IP%20%ED%9A%8D%EB%93%9D%20%EA%B3%BC%EC%A0%95.PNG)
 
 * * *
